<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.apolonio.asteroids</groupId>
    <artifactId>Asteroids</artifactId>
    <version>1.1.1</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <finalName>asteroids-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>dev.apolonio.asteroids.AsteroidsApplication</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>create-runtime</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>jlink</executable>
                            <arguments>
                                <argument>--module-path</argument>
                                <argument>$JAVA_HOME/jmods</argument>
                                <argument>--add-modules</argument>
                                <argument>java.base,java.desktop,javafx.base,javafx.graphics,javafx.media,javafx.swing</argument>
                                <argument>--output</argument>
                                <argument>custom-runtime</argument>
                                <argument>--compress=2</argument>
                                <argument>--strip-native-commands</argument>
                                <argument>--no-man-pages</argument>
                                <argument>--no-header-files</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>package-app</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>jpackage</executable>
                            <arguments>
                                <argument>--type</argument>
                                <argument>app-image</argument>
                                <argument>--app-version</argument>
                                <argument>${project.version}</argument>
                                <argument>--copyright</argument>
                                <argument>Copyright (c) 2024 Vitor A. S. Melo</argument>
                                <argument>--description</argument>
                                <argument>A simple Asteroids clone.</argument>
                                <argument>--icon</argument>
                                <argument>src/main/resources/icons/icon.ico</argument>
                                <argument>--name</argument>
                                <argument>asteroids</argument>
                                <argument>--input</argument>
                                <argument>${project.build.directory}</argument>
                                <argument>--main-jar</argument>
                                <argument>${project.build.finalName}.jar</argument>
                                <argument>--runtime-image</argument>
                                <argument>custom-runtime</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>